samples/_failures_safe/1761163427_4a59be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e06c3a06.c: In function ‘main’:
./samples/SAFE/__tmp_e06c3a06.c:149:5: error: expected declaration or statement at end of input
  149 |     add_edge(&g, 4, 5, 3);
      |     ^~~~~~~~
